added .env file, small changes to models, updated client folder to add and present SignInPage and SignInSheet in dev site, small css changes and moved things around App so that not all Routes include the sign up

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 }
+
+.app-header {
+  position: absolute; top:0; left: 0;
+  width: 100%;
+  background-color: gray;
+}
