--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
 .logo {
@@ -46,3 +46,12 @@
   width: 100%;
   background-color: gray;
 }
+
+.display-toggle {
+  position: absolute; top:0;
+}
+
+.header {
+  margin-top: 10%;
+}
+
