--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,8 +25,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  place-items: left;
+  min-width: 500px;
+  width: 50px;
   min-height: 100vh;
 }
 
@@ -69,4 +70,8 @@ button:focus-visible {
 
 .app-header {
   margin-top: 0;
+}
+
+.display-toggle {
+  position: absolute; top: 35px;;
 }
